# ewoksgalaxy

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
doc/: conf.py  index.rst
src/ewoksgalaxy/: engine.py  io.py
src/ewoksgalaxy/tests/: __init__.py  conftest.py  iris.ga  test_engine.py  test_io.py
